--- a/fudo/package.json
+++ b/fudo/package.json
@@ -13,6 +13,7 @@
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.7.7",
     "morgan": "~1.6.1",
+    "passport": "^0.3.2",
     "serve-favicon": "~2.3.0"
   }
 }
